maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:13: error: ')' expected but 'else' found.
		else {avance()
                ^