maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	def murAgauche() : Boolean ={
	var mur :Boolean = false
	gauche()
	if (estFaceMur()) {mur = true}
	droite()
	return b }

	def keepHandOnSideWall() {
		while (!murAgauche) {gauche()}
		if (estFaceMur() {droite()}
		else {avance()
			if (!murAgauche) {gauche() ;avance()}
				if (!murAgauche) {gauche();avance()}
		}}
		
	
	
while(!estSurBiscuit()){	
keepHandOnSideWall()
}
prendBiscuit();
}
